refactor: improve extension functionality and UI
This commit refactors the extension to improve its
functionality and user interface.  The changes include:

- Updating the extension description and UI elements
  for better clarity.
- Improving the filtering mechanism for more
  efficient topic management.
- Enhancing the settings panel with a more intuitive
  design and improved functionality.
- Adding support for environment variables to
  configure the server port.
- Improving the code structure and organization for
  better maintainability.

--- a/manifest.json
+++ b/manifest.json
@@ -1,28 +1,11 @@
 {
-    "name": "__MSG_extension_name__",
-    "version": "1.0.0",
-    "description": "__MSG_extension_description__",
     "manifest_version": 3,
-    "author": "Emre Uludüz",
-    "default_locale": "en",
-    "icons": {
-        "16": "icons/icon_16.png",
-        "32": "icons/icon_32.png",
-        "48": "icons/icon_48.png",
-        "128": "icons/icon_128.png"
-    },
-    "action": {
-        "default_popup": "src/actions/index.html",
-        "default_title": "ek$tension"
-    },
-    "background": {
-        "service_worker": "src/background/background.js",
-        "type": "module"
-    },
+    "name": "__MSG_extension_name__",
+    "description": "__MSG_extension_description__",
+    "version": "1.0.0",
+    "default_locale": "tr",
     "permissions": [
         "contextMenus",
-        "tabs",
-        "activeTab",
         "scripting",
         "storage",
         "notifications",
@@ -30,14 +13,41 @@
         "offscreen"
     ],
     "host_permissions": [
-        "*://*.eksisozluk.com/*"
+        "https://eksisozluk.com/*"
     ],
+    "action": {
+        "default_popup": "src/actions/index.html",
+        "default_icon": {
+            "16": "icons/icon_16.png",
+            "48": "icons/icon_48.png",
+            "128": "icons/icon_128.png"
+        }
+    },
+    "background": {
+        "service_worker": "src/background/background.js",
+        "type": "module"
+    },
+    "icons": {
+        "16": "icons/icon_16.png",
+        "48": "icons/icon_48.png",
+        "128": "icons/icon_128.png"
+    },
     "web_accessible_resources": [{
         "resources": [
-          "src/actions/js/storage.js",
-          "src/offscreen/offscreen.html",
-          "src/offscreen/offscreen.js"
+            "src/utils/*.js",
+            "src/actions/js/*.js",
+            "src/background/*.js",
+            "src/content/*.js"
         ],
-        "matches": ["*://*.eksisozluk.com/*"]
+        "matches": ["<all_urls>"]
+    }],
+    "content_scripts": [{
+        "matches": ["*://*.eksisozluk.com/*"],
+        "js": [
+            "src/content/content-constants.js",
+            "src/content/content-storage.js",
+            "src/content/filter.js"
+        ],
+        "run_at": "document_end"
     }]
 }
