feat: enhance extension capabilities with new site support and UI improvements
This commit introduces several enhancements to the extension, including:

- Added support for additional sites (YouTube, Wikipedia, IMDb, Steam, Epic Games) in the manifest and background scripts.
- Improved the context menu and popup UI for better user interaction.
- Refactored storage handling to utilize local storage for favorites and following lists.
- Updated CSS styles for a more cohesive design across the extension.
- Implemented a new SiteAnalyzer class for better site-specific data extraction and caching.
- Removed deprecated content scripts to streamline the codebase.

These changes aim to improve the overall functionality and user experience of the extension.

--- a/manifest.json
+++ b/manifest.json
@@ -5,15 +5,21 @@
     "version": "1.0.0",
     "default_locale": "tr",
     "permissions": [
-        "contextMenus",
-        "scripting",
         "storage",
+        "contextMenus",
         "notifications",
         "alarms",
+        "scripting",
+        "tabs",
         "offscreen"
     ],
     "host_permissions": [
-        "https://eksisozluk.com/*"
+        "https://eksisozluk.com/*",
+        "https://*.youtube.com/*",
+        "https://*.wikipedia.org/*",
+        "https://*.imdb.com/*",
+        "https://*.steampowered.com/*",
+        "https://*.epicgames.com/*"
     ],
     "action": {
         "default_popup": "src/actions/index.html",
@@ -37,17 +43,30 @@
             "src/utils/*.js",
             "src/actions/js/*.js",
             "src/background/*.js",
-            "src/content/*.js"
+            "src/content/*.js",
+            "icons/sites/*.png",
+            "icons/*"
         ],
         "matches": ["<all_urls>"]
     }],
-    "content_scripts": [{
-        "matches": ["*://*.eksisozluk.com/*"],
-        "js": [
-            "src/content/content-constants.js",
-            "src/content/content-storage.js",
-            "src/content/filter.js"
-        ],
-        "run_at": "document_end"
-    }]
+    "content_scripts": [
+        {
+            "matches": ["*://*.eksisozluk.com/*"],
+            "js": [
+                "src/content/filter.js"
+            ],
+            "run_at": "document_end"
+        },
+        {
+            "matches": [
+                "https://*.youtube.com/*",
+                "https://*.wikipedia.org/*",
+                "https://*.imdb.com/*",
+                "https://*.steampowered.com/*",
+                "https://*.epicgames.com/*"
+            ],
+            "css": ["src/content/content.css"],
+            "js": ["src/content/content.js"]
+        }
+    ]
 }
